# AgenticForge

./: .env.example  .gitignore  INSTALL.md  Makefile  README.md  pyproject.toml
demo/mock_api/: main.py
demo/mock_devops_api/: main.py
demo/scripts/: _common.py  m2_devops_tools_and_call.py  m2_register_tool_and_call.py
docs/: AgenticForge_Technical_Design_Document.docx  TECHNICAL_DESIGN.md
docs/architecture/: block-diagram.md
infra/docker-compose/: docker-compose.langfuse.yml  docker-compose.yml  migrate.Dockerfile
ingestion/: pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
services/mcp-server/: Dockerfile  pyproject.toml
services/mcp-server/src/mcp_server/: server.py
services/mcp-server/src/mcp_server/governance/: audit.py  auth.py
services/mcp-server/src/mcp_server/tools/: demo_weather.py  devops.py
services/orchestrator-api/: Dockerfile  pyproject.toml
services/orchestrator-api/src/orchestrator_api/: main.py
services/orchestrator-worker/: pyproject.toml
