[project]
name = "ingestion"
version = "0.1.0"
description = "AgenticForge ingestion pipelines — files (RAG), SQL/datalake (semantic layer) (built out from M6)"
requires-python = ">=3.11"
dependencies = [
    "agenticforge-shared",
    "unstructured>=0.15",
    "langchain-text-splitters>=0.3",
    "arq>=0.26",
]

[tool.uv.sources]
agenticforge-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
