[project]
name = "orchestrator-api"
version = "0.1.0"
description = "AgenticForge orchestrator API — FastAPI surface for runs, agents, tools, models, admin"
requires-python = ">=3.11"
dependencies = [
    "agenticforge-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "redis>=5.0",
]

[tool.uv.sources]
agenticforge-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_api"]
