[project]
name = "orchestrator-worker"
version = "0.1.0"
description = "AgenticForge orchestrator worker — executes LangGraph runs off a queue (built out from M4)"
requires-python = ">=3.11"
dependencies = [
    "agenticforge-shared",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-mcp-adapters>=0.1",
    "arq>=0.26",
]

[tool.uv.sources]
agenticforge-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_worker"]
